--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,16 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[rpc_endpoints]
+ethereum="https://eth.llamarpc.com"
+arbitrum="https://arbitrum.llamarpc.com"
+base="https://base.llamarpc.com"
+sepolia="https://sepolia.drpc.org"
+arbitrum_sepoliamm="https://arbitrum-sepolia.blockpi.network/v1/rpc/public"
+base_sepolia="https://base-sepolia.blockpi.network/v1/rpc/public"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
+arbitrum-sepolia = { key = "${ARBISCAN_API_KEY}" }
+base-sepolia = { key = "${BASESCAN_API_KEY}" }
